--- a/docker/elk/setup/Dockerfile
+++ b/docker/elk/setup/Dockerfile
@@ -1,15 +1,12 @@
 ARG ELASTIC_VERSION
 
 # https://www.docker.elastic.co/
-FROM elasticsearch:${ELASTIC_VERSION}
+FROM docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-8.15.5}
+# RUN set -eux; \
+# 	mkdir /state; \
+# 	chmod 0775 /state; \
+# 	chown elasticsearch:root /state
 
-USER root
-
-RUN set -eux; \
-	mkdir /state; \
-	chmod 0775 /state; \
-	chown elasticsearch:root /state
-
-USER elasticsearch:root
-
+# USER elasticsearch:root
 ENTRYPOINT ["/entrypoint.sh"]
+
